[workspace]
resolver = "2"
members = [
    "capybara",

    "examples/benchmark",
    "examples/ldtk",
    "examples/light",
    "examples/particles",
    "examples/physics",
    "examples/template",
    "examples/ui",
    
    "examples/network/benchmark/base",
    "examples/network/benchmark/client",
    "examples/network/benchmark/server",

    "examples/network/snake/base",
    "examples/network/snake/client",
    "examples/network/snake/hub",
    "examples/network/snake/worker",
]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"