[workspace]
resolver = "2"
members = [
    "capybara",

    "examples/benchmark",
    "examples/ldtk",
    "examples/light",
    "examples/particles",
    "examples/physics",
    "examples/powder",
    "examples/template",
    "examples/ui",
    
    "examples/network/simple/base",
    "examples/network/simple/client",
    "examples/network/simple/server",

    "examples/network/snake/base",
    "examples/network/snake/client",
    "examples/network/snake/hub",
    "examples/network/snake/worker",
]
# exclude = [
#     "examples/template",
# ]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"