[package]
name = "orion-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.70" }
log = { version = "0.4.17" }
glow = { version = "0.12.1" }
glam = { version = "0.24.0" }
egui = { version = "0.21.0" }
zip = { version = "0.6.5", default-features = false, features = [ "deflate" ] }
walkdir = { version = "2.3.3" }
png = { version = "0.17.8" }
quick-xml = { version = "0.28.2" }

[build-dependencies]
cfg_aliases = { version = "0.1.1" }

[target.'cfg(all(target_os = "windows", target_arch = "x86_64"))'.dependencies]
winapi = { version = "0.3.9", features = [ 
    "winuser", 
    "libloaderapi", 
    "errhandlingapi" 
]}
simple_logger = { version = "4.1.0", default-features = false, features = [ "timestamps" ]}
instant = { version = "0.1.12" }

[target.'cfg(all(target_os = "linux", target_arch = "x86_64"))'.dependencies]
x11 = { version = "2.21.0", features = [
    "xlib",
    "xfixes",
    "glx" 
]}
simple_logger = { version = "4.1.0", default-features = false, features = [ "timestamps" ]}
instant = { version = "0.1.12" }

[target.'cfg(all(target_os = "unknown", target_arch = "wasm32"))'.dependencies]
web-sys = { version = "0.3.61", features = [
    "Window", 
    "Document", 
    "Element", 
    "HtmlCanvasElement", 
    "CanvasRenderingContext2d", 
    "MouseEvent", 
    "WheelEvent", 
    "KeyboardEvent", 
    "console",
    "CssStyleDeclaration",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response"
]}
js-sys = { version = "0.3.61" }
wasm-bindgen = { version = "0.2.84" }
console_log = { version = "1.0.0" }
console_error_panic_hook = { version = "0.1.7" }
instant = { version = "0.1.12", features = [ "wasm-bindgen" ] }

[profile.release]
debug = true