[package]
name = "template"
version = "1.0.0"
edition = "2021"

[dependencies]
capybara = { path = "../capybara", features = [ "audio" ] }

[build-dependencies]
anyhow = { version = "1.0.75" }
cfg_aliases = { version = "0.1.1" }

# [profile.release]
# lto = true
# codegen-units = 1
# panic = "abort"
# strip = "symbols"