[package]
name = "network-server"
version = "1.0.0"
edition = "2021"

[target.'cfg(not(all(target_os = "unknown", target_arch = "wasm32")))'.dependencies]
network-base = { path = "../base" }
capybara = { path = "../../../capybara", features = [ "network" ] }
log = { version = "0.4.20" }
simple_logger = { version = "4.3.0", default-features = false, features = [ "timestamps" ]}
tokio = { version = "1.34.0", features = [ "time" ] }
futures-util = { version = "0.3" }
futures-channel = { version = "0.3" }

[build-dependencies]
cfg_aliases = { version = "0.1.1" }
