[package]
name = "network-template-client"
version = "1.0.0"
edition = "2021"

[dependencies]
network-template-base = { path = "../base" }
capybara = { path = "../../../../capybara", features = [ "audio" ] }
log = { version = "0.4.20" }

[build-dependencies]
anyhow = { version = "1.0.79" }
cfg_aliases = { version = "0.2.0" }

# [profile.release]
# lto = true
# codegen-units = 1
# panic = "abort"
# strip = "symbols"